--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
+      "@components/filters/*": ["src/components/filters/*"],
       "@pages/*": ["src/pages/*"],
       "@services/*": ["src/services/*"]
     }
