--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "sass": "^1.62.1"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "react-router-dom": "^6.10.0",
-    "sass": "^1.61.0"
-  }
+    "axios": "^1.3.6",
+    "react-router-dom": "^6.10.0"
+  },
+  "main": "index.js"
 }
