--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "nodemon": "^2.0.22",
     "react-router-dom": "^6.10.0"
   },
   "main": "index.js"
