--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-select-search": "^4.1.6",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
