--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
+    "nodemon": "^2.0.22",
     "sass": "^1.62.1"
   },
   "dependencies": {
